apps/tabs-spaces/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rea.application.name
  namespace: rea.namespace.name
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

spec:
  # tls:
  # - secretName: rea.application.name
  #   hosts:
  #   - rea.application.name.rea.cluster.name.res-edge.com
  rules:
  - host: rea.application.name.rea.cluster.name.res-edge.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rea.application.name
            port:
              number: 8080
